Better Swagger
